kubernetes/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shop-manager-prod
  labels:
    name: shop-manager-prod
    environment: production
    app: shop-manager
